--- a/Chips/app/src/main/AndroidManifest.xml
+++ b/Chips/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
     package="com.milieur.chips">
+    <uses-feature android:glEsVersion="0x00030001" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -9,6 +10,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity
+            android:name="com.milieur.chips.activity.LevelActivity"
+            android:label="Chips" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
